# platzi_machine_learning

./: calcular_autovalores_autovectores.ipynb  fundamentos_escalado.ipynb  fundamentos_evaluacion del modelo.ipynb  fundamentos_exploracion.ipynb  fundamentos_ingenieria_caracteristicas.ipynb  fundamentos_k_means.ipynb  fundamentos_pca.ipynb  fundamentos_preparacion.ipynb  fundamentos_regresion.ipynb  fundamentos_seleccion_caracteristicas.ipynb  fundamientos_k_means_interpretacion.ipynb  pyproject.toml
